Consistent CSS, rid of counter

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/products">Products</a></li>
-                    <li><a href="/cart" class="active">Cart <span id="cart-count">0</span></a></li>
+                    <li><a href="/cart" class="active">Cart</a></li>
                 </ul>
             </nav>
         </div>
