--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/products">Products</a></li>
-                    <li><a href="#">Cart <span id="cart-count">0</span></a></li>
+                    <li><a href="#">Cart</a></li>
                 </ul>
             </nav>
         </div>
