--- a/templates/products.html
+++ b/templates/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products - PLACEHOLDERNAME</title>
+    <title>PLACEHOLDERNAME - Your Online Store</title>
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
@@ -13,8 +13,8 @@
             <nav>
                 <ul>
                     <li><a href="/">Home</a></li>
-                    <li><a href="/products" class="active">Products</a></li>
-                    <li><a href="#" id="cart-link">Cart <span id="cart-count">0</span></a></li>
+                    <li><a href="/products">Products</a></li>
+                    <li><a href="#">Cart</a></li>
                 </ul>
             </nav>
         </div>
