--- a/static/css/style.css
+++ b/static/css/style.css
@@ -157,7 +157,10 @@ nav ul li a.active {
     font-size: 1rem;
     margin-bottom: 10px;
     font-weight: 600;
-    height: 2.4rem;
+    height: auto;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
     overflow: hidden;
 }
 
