--- a/templates/products.html
+++ b/templates/products.html
@@ -22,7 +22,9 @@
     <main class="container">
         <section class="products-section">
             <h2>All Products</h2>
-            
+            <div class="product-search">
+                <input type="text" id="product-search" placeholder="Search products..." />
+            </div>            
             <div class="product-filters" id="product-filters">
                 <!-- Category filters will be added here -->
             </div>
