Forgot to push html updates

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLACEHOLDERNAME - Your Shopping Cart</title>
+    <title>Sploosh - Your Shopping Cart</title>
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>PLACEHOLDERNAME</h1>
+            <h1>Sploosh</h1>
             <nav>
                 <ul>
                     <li><a href="/">Home</a></li>
@@ -30,7 +30,7 @@
     </main>
     <footer>
         <div class="container">
-            <p>&copy; 2025 PLACEHOLDERNAME. All rights reserved.</p>
+            <p>&copy; 2025 Sploosh. All rights reserved.</p>
         </div>
     </footer>
    
